# multi-llm-debate

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
src/debate/: __init__.py  agents.py  cache.py  client.py  config.py  engine.py  interfaces.py  prompts.py  roles.py
src/debate/dataset/: __init__.py  _stub.py  problems.json  problems.py  verifiers.py
src/debate/eval/: __init__.py  baselines.py  metrics.py  plots.py  runner.py
tests/: test_baselines.py  test_cache.py  test_dataset.py  test_engine.py  test_interfaces.py  test_live_smoke.py  test_metrics.py  test_plots.py  test_roles.py  test_runner.py  test_stub_pipeline.py  test_verifiers.py
